--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -13,7 +13,7 @@ ACCEPT_LICENSE="*"
 VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
-USE="X pulseaudio abi_x86_64 -wayland -systemd -bluetooth -selinux -xinerama -gnome"
+USE="X pulseaudio abi_x86_64 -netifrc -wayland -systemd -bluetooth -selinux -xinerama -gnome"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
