--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -8,12 +8,12 @@ CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 MAKEOPTS="-j4"
-EMERGE_DEFAULT_OPTS="--quiet --keep-going=y"
+EMERGE_DEFAULT_OPTS="--ask --quiet --keep-going=y"
 ACCEPT_LICENSE="*"
 VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
-USE="X pulseaudio abi_x86_64 -netifrc -wayland -systemd -bluetooth -selinux -xinerama -gnome"
+USE="X pulseaudio elogind udev policykit dbus networkmanager abi_x86_64 -gnome -kde -wayland -systemd -netifrc -bluetooth -selinux -xinerama -consolekit -gpm"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
