Minor formatting changes

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -13,7 +13,9 @@ ACCEPT_LICENSE="*"
 VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
-USE="X pulseaudio elogind udev policykit dbus networkmanager abi_x86_64 -gnome -kde -wayland -systemd -netifrc -bluetooth -selinux -xinerama -consolekit -gpm"
+USE="X pulseaudio elogind udev policykit dbus networkmanager abi_x86_64 \
+     -gnome -kde -wayland -systemd -netifrc -bluetooth -selinux -xinerama \
+     -consolekit -gpm"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
@@ -24,4 +26,5 @@ PKGDIR="/var/cache/binpkgs"
 LC_MESSAGES=C
 
 
-GENTOO_MIRRORS="https://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ ftp://mirrors.rit.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/"
+GENTOO_MIRRORS="https://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ 
+ftp://mirrors.rit.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/"
