Disabled emacs USE flag

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -15,7 +15,7 @@ EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
 USE="X pulseaudio elogind udev policykit dbus networkmanager abi_x86_64 \
      -gnome -kde -wayland -systemd -netifrc -bluetooth -selinux -xinerama \
-     -consolekit -gpm"
+     -consolekit -gpm -emacs"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
