Disabled networkmanager USE flag

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -13,9 +13,9 @@ ACCEPT_LICENSE="*"
 VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
-USE="X pulseaudio elogind udev policykit dbus networkmanager abi_x86_64 \
-     -gnome -kde -wayland -systemd -netifrc -bluetooth -selinux -xinerama \
-     -consolekit -gpm -emacs"
+USE="X pulseaudio elogind policykit elogind udev dbus abi_x86_64 \
+     -gnome -kde -wayland -systemd -bluetooth -selinux -xinerama \
+     -consolekit -gpm -emacs -networkmanager -netifrc"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
