Disabled some more USE flags

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -13,9 +13,10 @@ ACCEPT_LICENSE="*"
 VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
-USE="X pulseaudio elogind policykit elogind udev dbus abi_x86_64 \
-     -gnome -kde -wayland -systemd -bluetooth -selinux -xinerama \
-     -consolekit -gpm -emacs -networkmanager -netifrc"
+USE="X pulseaudio policykit elogind udev dbus abi_x86_64 \
+     -gnome -kde -wayland -xineramna -bluetooth -selinux \
+     -systemd -consolekit -gpm -emacs -networkmanager -netifrc \
+     -cups -cdda -cdr -dvd -dvdr -nls -bluray" 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
