Disabled -jack USE flag

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -14,9 +14,9 @@ VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
 USE="X pulseaudio policykit elogind udev dbus abi_x86_64 \
-     -gnome -kde -wayland -xineramna -bluetooth -selinux \
+     -jack -gnome -kde -wayland -xinerama -bluetooth -selinux \
      -systemd -consolekit -gpm -emacs -networkmanager -netifrc \
-     -cups -cdda -cdr -dvd -dvdr -nls -bluray" 
+     -cups -cdda -cdr -dvd -dvdr -bluray -nls" 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
