Gave /etc/portage files a much-needed update

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -7,16 +7,17 @@ CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-MAKEOPTS="-j4"
-EMERGE_DEFAULT_OPTS="--ask --quiet --keep-going=y"
+MAKEOPTS="-j4 -l4"
+EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=4 --ask --quiet --keep-going=y"
+FEATURES="binpkg-logs parallel-install"
 ACCEPT_LICENSE="*"
 VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
-USE="X pulseaudio policykit elogind udev dbus abi_x86_64 \
-     -jack -gnome -kde -wayland -xinerama -bluetooth -selinux \
-     -systemd -consolekit -gpm -emacs -networkmanager -netifrc \
-     -cups -cdda -cdr -dvd -dvdr -bluray -nls" 
+USE="X pulseaudio policykit elogind dbus networkmanager abi_x86_64 -jack \
+     -gnome -kde -qt4 -qt5 -gtk -gtk2 -gtk3 -wayland -xinerama -bluetooth \
+     -selinux -systemd -consolekit -gpm -emacs -netifrc -cups -cdda -cdr \
+     -cdr -dvd -dvdr -bluray -nls"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
@@ -26,6 +27,4 @@ PKGDIR="/var/cache/binpkgs"
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 
-
-GENTOO_MIRRORS="https://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ 
-ftp://mirrors.rit.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/"
+GENTOO_MIRRORS="https://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ ftp://mirrors.rit.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/"
