Enabled cdrom support

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -16,8 +16,8 @@ EDITOR=/usr/bin/vim
 GRUB_PLATFORMS="efi-64"
 USE="X pulseaudio policykit elogind dbus networkmanager abi_x86_64 -jack \
      -gnome -kde -qt4 -qt5 -gtk -gtk2 -gtk3 -wayland -xinerama -bluetooth \
-     -selinux -systemd -consolekit -gpm -emacs -netifrc -cups -cdda -cdr \
-     -cdr -dvd -dvdr -bluray -nls"
+     -selinux -systemd -consolekit -emacs -netifrc -cups -dvd -dvdr -bluray \
+     -nls"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
