--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -2,22 +2,28 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
+CHOST="x86_64-pc-linux-gnu"
 COMMON_FLAGS="-march=skylake -O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 MAKEOPTS="-j4 -l4"
-EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=4 --ask --quiet --keep-going=y"
-FEATURES="binpkg-logs parallel-install"
+EMERGE_DEFAULT_OPTS="--ask-enter-invalid --jobs=4 --load-average=4 --quiet"
+PORTAGE_NICENESS="10"
+FEATURES="fail-clean binpkg-logs parallel-fetch parallel-install"
 ACCEPT_LICENSE="*"
+GRUB_PLATFORMS="efi-64"
+INPUT_DEVICES="libinput"
 VIDEO_CARDS="nvidia"
 EDITOR=/usr/bin/vim
-GRUB_PLATFORMS="efi-64"
-USE="X pulseaudio policykit elogind dbus networkmanager abi_x86_64 -jack \
-     -gnome -kde -qt4 -qt5 -gtk -gtk2 -gtk3 -wayland -xinerama -bluetooth \
-     -selinux -systemd -consolekit -emacs -netifrc -cups -dvd -dvdr -bluray \
-     -nls"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sse \
+	       sse2 sse3 sse4_1 sse4_2 ssse3"
+ABI_X86="64"
+USE="X pulseaudio policykit elogind dbus networkmanager -jack -gnome -kde \
+     -qt4 -qt5 -gtk -gtk2 -gtk3 -wayland -xinerama -bluetooth -selinux \
+     -systemd -consolekit -emacs -netifrc -cups -dvd -dvdr -bluray -nls \
+     -synaptics"
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
@@ -27,4 +33,5 @@ PKGDIR="/var/cache/binpkgs"
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 
-GENTOO_MIRRORS="https://mirrors.rit.edu/gentoo/ http://mirrors.rit.edu/gentoo/ ftp://mirrors.rit.edu/gentoo/ rsync://mirrors.rit.edu/gentoo/"
+GENTOO_MIRRORS="https://mirrors.rit.edu/gentoo/"
+
