Disabled more use flags + organization

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -1,37 +1,56 @@
-# These settings were set by the catalyst build script that automatically
-# built this stage.
-# Please consult /usr/share/portage/config/make.conf.example for a more
-# detailed example.
-CHOST="x86_64-pc-linux-gnu"
+# common flags
 COMMON_FLAGS="-march=skylake -O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
+
+# Portage settings
+CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j4 -l4"
-EMERGE_DEFAULT_OPTS="--ask-enter-invalid --jobs=4 --load-average=4 --quiet"
+EMERGE_DEFAULT_OPTS="--ask --jobs=4 --load-average=4 --quiet"
 PORTAGE_NICENESS="10"
 FEATURES="fail-clean binpkg-logs parallel-fetch parallel-install"
 ACCEPT_LICENSE="*"
-GRUB_PLATFORMS="efi-64"
-INPUT_DEVICES="libinput"
-VIDEO_CARDS="nvidia"
-EDITOR=/usr/bin/vim
-CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sse \
-	       sse2 sse3 sse4_1 sse4_2 ssse3"
-ABI_X86="64"
-USE="X pulseaudio policykit elogind dbus networkmanager -jack -gnome -kde \
-     -qt4 -qt5 -gtk -gtk2 -gtk3 -wayland -xinerama -bluetooth -selinux \
-     -systemd -consolekit -emacs -netifrc -cups -dvd -dvdr -bluray -nls \
-     -synaptics"
-# NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
-
-# This sets the language of build output to English.
-# Please keep this setting intact when reporting bugs.
-LC_MESSAGES=C
-
 GENTOO_MIRRORS="https://mirrors.rit.edu/gentoo/"
 
+# system definitions
+GRUB_PLATFORMS="efi-64"
+INPUT_DEVICES="libinput"
+VIDEO_CARDS="nvidia"
+ABI_X86="64"
+EDITOR=/usr/bin/vim
+LC_MESSAGES=C
+
+# CPU flags
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand \
+	       sse sse2 sse3 sse4_1 sse4_2 ssse3"
+
+# USE flags
+# desktop
+USE="X pulseaudio policykit elogind dbus udev networkmanager -wayland \
+     -systemd -consolekit -gnome -kde -xinerama -bluetooth -selinux \
+     -nls -telemetry -branding"
+
+# applications, frameworks, libraries
+USE="$USE -gtk -gtk2 -gtk3 -kde -qt4 -qt5 -apache2 -aqua -nntp -samba \
+     -netifrc -tcl -appindicator -lirc -libcaca -maildir -snappy"
+
+# networking
+USE="$USE networkmanager -connman -netifrc -geolocation -geoip"
+
+# sound
+USE="$USE pulseaudio -jack -oss -coreaudio"
+
+# media
+USE="$USE -css -dvd -dvdr -bluray -cdda -cdrom -cddb -quicktime"
+
+# file formats
+USE="$USE -a52 -aac -tiff -vorbis -ogg -webp -wmf -djvu -netcdf -xpm"
+
+# hardware
+USE="$USE -cups -ios -ipod -pda -smartcard -pcmcia -synaptics \
+     -ieee1394 -altivec -ibm -nas -3dfx -joystick"
