Removed redundant use flags

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -9,8 +9,8 @@ FFLAGS="${COMMON_FLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j4 -l4"
 EMERGE_DEFAULT_OPTS="--ask --jobs=4 --load-average=4 --quiet"
-PORTAGE_NICENESS="10"
 FEATURES="fail-clean binpkg-logs parallel-fetch parallel-install"
+PORTAGE_NICENESS="10"
 ACCEPT_LICENSE="*"
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
@@ -26,21 +26,22 @@ EDITOR=/usr/bin/vim
 LC_MESSAGES=C
 
 # CPU flags
-CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand \
-	       sse sse2 sse3 sse4_1 sse4_2 ssse3"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt \
+	       rdrand sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
 # USE flags
 # desktop
-USE="X pulseaudio policykit elogind dbus udev networkmanager -wayland \
-     -systemd -consolekit -gnome -kde -xinerama -bluetooth -selinux \
-     -nls -telemetry -branding"
+USE="X policykit elogind dbus udev networkmanager -wayland -systemd \
+     -consolekit -gnome -kde -xinerama -bluetooth -selinux -nls \
+     -branding"
 
 # applications, frameworks, libraries
-USE="$USE -gtk -gtk2 -gtk3 -kde -qt4 -qt5 -apache2 -aqua -nntp -samba \
-     -netifrc -tcl -appindicator -lirc -libcaca -maildir -snappy"
+USE="$USE -gtk -gtk2 -gtk3 -kde -qt4 -qt5 -apache2 -aqua -nntp \
+     -samba -tcl -appindicator -lirc -libcaca -maildir -snappy"
 
 # networking
-USE="$USE networkmanager -connman -netifrc -geolocation -geoip"
+USE="$USE networkmanager -connman -netifrc -geolocation -geoip \
+     -telemetry"
 
 # sound
 USE="$USE pulseaudio -jack -oss -coreaudio"
@@ -49,7 +50,8 @@ USE="$USE pulseaudio -jack -oss -coreaudio"
 USE="$USE -css -dvd -dvdr -bluray -cdda -cdrom -cddb -quicktime"
 
 # file formats
-USE="$USE -a52 -aac -tiff -vorbis -ogg -webp -wmf -djvu -netcdf -xpm"
+USE="$USE -a52 -aac -tiff -vorbis -ogg -webp -wmf -djvu -netcdf \
+     -xpm"
 
 # hardware
 USE="$USE -cups -ios -ipod -pda -smartcard -pcmcia -synaptics \
