Removed more redundant use flags

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -10,7 +10,7 @@ CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j4 -l4"
 EMERGE_DEFAULT_OPTS="--ask --jobs=4 --load-average=4 --quiet"
 FEATURES="fail-clean binpkg-logs parallel-fetch parallel-install"
-PORTAGE_NICENESS="10"
+PORTAGE_NICENESS="8"
 ACCEPT_LICENSE="*"
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
@@ -31,9 +31,8 @@ CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt \
 
 # USE flags
 # desktop
-USE="X policykit elogind dbus udev networkmanager -wayland -systemd \
-     -consolekit -gnome -kde -xinerama -bluetooth -selinux -nls \
-     -branding"
+USE="X policykit elogind dbus udev -wayland -systemd -consolekit \
+     -gnome -kde -xinerama -bluetooth -selinux -nls -branding" 
 
 # applications, frameworks, libraries
 USE="$USE -gtk -gtk2 -gtk3 -kde -qt4 -qt5 -apache2 -aqua -nntp \
