--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -35,7 +35,7 @@ USE="X policykit elogind dbus udev -wayland -systemd -consolekit \
      -gnome -kde -xinerama -bluetooth -selinux -nls -branding" 
 
 # applications, frameworks, libraries
-USE="$USE -gtk -gtk2 -gtk3 -kde -qt4 -qt5 -apache2 -aqua -nntp \
+USE="$USE -gtk -gtk2 -gtk3 -qt4 -qt5 -apache2 -aqua -nntp -samba \
      -samba -tcl -appindicator -lirc -libcaca -maildir -snappy"
 
 # networking
